Вставил все фотки

--- a/ezotera-frontend/index.html
+++ b/ezotera-frontend/index.html
@@ -27,7 +27,7 @@
         <div class="header__inner">
 
             <!-- Logo -->
-            <a href="index.html" class="header__logo" aria-label="Ezotera — Главная">
+            <a href="Ezotera-frontend/index.html" class="header__logo" aria-label="Ezotera — Главная">
                 <img src="assets/icons/logo.jpg" alt="Ezotera" class="header__logo-icon" width="36" height="36">
                 <span class="header__logo-text">Ezo<span>tera</span></span>
             </a>
@@ -208,7 +208,7 @@
                     </a>
                 </div>
                 <div class="hero__image">
-                    <img src="assets/images/hero-astrology.svg" alt="Астрологические консультации" width="480" height="400">
+                    <img src="assets/icons/ФОН1.jpg" alt="Астрологические консультации" width="480" height="400">
                 </div>
             </div>
         </section>
@@ -228,7 +228,7 @@
                     <!-- Feature 1 -->
                     <article class="feature-card fade-in">
                         <div class="feature-card__icon">
-                            <img src="assets/icons/zodiac.svg" alt="" width="64" height="64" aria-hidden="true">
+                            <img src="assets/icons/zodiac.jpg" alt="" width="64" height="64" aria-hidden="true">
                         </div>
                         <h3 class="feature-card__title">Знаки зодиака</h3>
                         <p class="feature-card__text">
@@ -245,7 +245,7 @@
                     <!-- Feature 2 -->
                     <article class="feature-card fade-in">
                         <div class="feature-card__icon">
-                            <img src="assets/icons/horoscope.svg" alt="" width="64" height="64" aria-hidden="true">
+                            <img src="assets/icons/horoscope.jpg" alt="" width="64" height="64" aria-hidden="true">
                         </div>
                         <h3 class="feature-card__title">Гороскопы</h3>
                         <p class="feature-card__text">
@@ -262,7 +262,7 @@
                     <!-- Feature 3 -->
                     <article class="feature-card fade-in">
                         <div class="feature-card__icon">
-                            <img src="assets/icons/palm.svg" alt="" width="64" height="64" aria-hidden="true">
+                            <img src="assets/icons/hiromatia.jpg" alt="" width="64" height="64" aria-hidden="true">
                         </div>
                         <h3 class="feature-card__title">Хиромантия</h3>
                         <p class="feature-card__text">
@@ -279,7 +279,7 @@
                     <!-- Feature 4 -->
                     <article class="feature-card fade-in">
                         <div class="feature-card__icon">
-                            <img src="assets/icons/compatibility.svg" alt="" width="64" height="64" aria-hidden="true">
+                            <img src="assets/icons/sovmestimost.jpg" alt="" width="64" height="64" aria-hidden="true">
                         </div>
                         <h3 class="feature-card__title">Совместимость</h3>
                         <p class="feature-card__text">
@@ -296,7 +296,7 @@
                     <!-- Feature 5 -->
                     <article class="feature-card fade-in">
                         <div class="feature-card__icon">
-                            <img src="assets/icons/birthchart.svg" alt="" width="64" height="64" aria-hidden="true">
+                            <img src="assets/icons/natal.jpg" alt="" width="64" height="64" aria-hidden="true">
                         </div>
                         <h3 class="feature-card__title">Натальная карта</h3>
                         <p class="feature-card__text">
@@ -313,7 +313,7 @@
                     <!-- Feature 6 -->
                     <article class="feature-card fade-in">
                         <div class="feature-card__icon">
-                            <img src="assets/icons/tarot.svg" alt="" width="64" height="64" aria-hidden="true">
+                            <img src="assets/icons/taro.jpg" alt="" width="64" height="64" aria-hidden="true">
                         </div>
                         <h3 class="feature-card__title">Таро</h3>
                         <p class="feature-card__text">
@@ -345,7 +345,7 @@
                     <!-- Advisor 1 -->
                     <div class="advisor-card fade-in">
                         <div class="advisor-card__avatar">
-                            <img src="assets/images/advisor-1.svg" alt="Астролог Шарлотта" width="120" height="120">
+                            <img src="assets/images/шарота.jpg" alt="Астролог Шарлотта" width="120" height="120">
                         </div>
                         <h4 class="advisor-card__name">Шарлотта</h4>
                         <span class="advisor-card__specialty">Любовь и отношения</span>
@@ -357,7 +357,7 @@
                     <!-- Advisor 2 -->
                     <div class="advisor-card fade-in">
                         <div class="advisor-card__avatar">
-                            <img src="assets/images/advisor-2.svg" alt="Астролог Сурадж" width="120" height="120">
+                            <img src="assets/images/сурадж.jpg" alt="Астролог Сурадж" width="120" height="120">
                         </div>
                         <h4 class="advisor-card__name">Сурадж</h4>
                         <span class="advisor-card__specialty">Энергия и духовность</span>
@@ -369,7 +369,7 @@
                     <!-- Advisor 3 -->
                     <div class="advisor-card fade-in">
                         <div class="advisor-card__avatar">
-                            <img src="assets/images/advisor-3.svg" alt="Астролог Эсмеральда" width="120" height="120">
+                            <img src="assets/images/эсмирильда.jpg" alt="Астролог Эсмеральда" width="120" height="120">
                         </div>
                         <h4 class="advisor-card__name">Эсмеральда</h4>
                         <span class="advisor-card__specialty">Энергия и духовность</span>
@@ -381,7 +381,7 @@
                     <!-- Advisor 4 -->
                     <div class="advisor-card fade-in">
                         <div class="advisor-card__avatar">
-                            <img src="assets/images/advisor-4.svg" alt="Астролог Шарифа" width="120" height="120">
+                            <img src="assets/images/4.jpg" alt="Астролог Шарифа" width="120" height="120">
                         </div>
                         <h4 class="advisor-card__name">Шарифа</h4>
                         <span class="advisor-card__specialty">Энергия и духовность</span>
@@ -421,7 +421,7 @@
                         <!-- Testimonial 1 -->
                         <div class="testimonial-card">
                             <div class="testimonial-card__header">
-                                <img src="assets/images/user-1.svg" alt="Лаура" class="testimonial-card__avatar" width="56" height="56">
+                                <img src="assets/images/лаура.jpg" alt="Лаура" class="testimonial-card__avatar" width="56" height="56">
                                 <div>
                                     <h4 class="testimonial-card__name">Лаура</h4>
                                     <div class="testimonial-card__stars" aria-label="Оценка: 5 из 5">
@@ -441,7 +441,7 @@
                         <!-- Testimonial 2 -->
                         <div class="testimonial-card">
                             <div class="testimonial-card__header">
-                                <img src="assets/images/user-2.svg" alt="Марк" class="testimonial-card__avatar" width="56" height="56">
+                                <img src="assets/images/михаил.jpg" alt="Марк" class="testimonial-card__avatar" width="56" height="56">
                                 <div>
                                     <h4 class="testimonial-card__name">Марк</h4>
                                     <div class="testimonial-card__stars" aria-label="Оценка: 5 из 5">
@@ -461,7 +461,7 @@
                         <!-- Testimonial 3 -->
                         <div class="testimonial-card">
                             <div class="testimonial-card__header">
-                                <img src="assets/images/user-3.svg" alt="Карина" class="testimonial-card__avatar" width="56" height="56">
+                                <img src="assets/images/карина.jpg" alt="Карина" class="testimonial-card__avatar" width="56" height="56">
                                 <div>
                                     <h4 class="testimonial-card__name">Карина</h4>
                                     <div class="testimonial-card__stars" aria-label="Оценка: 5 из 5">
@@ -481,7 +481,7 @@
                         <!-- Testimonial 4 -->
                         <div class="testimonial-card">
                             <div class="testimonial-card__header">
-                                <img src="assets/images/user-4.svg" alt="Клара" class="testimonial-card__avatar" width="56" height="56">
+                                <img src="assets/images/клара.jpg" alt="Клара" class="testimonial-card__avatar" width="56" height="56">
                                 <div>
                                     <h4 class="testimonial-card__name">Клара</h4>
                                     <div class="testimonial-card__stars" aria-label="Оценка: 5 из 5">
@@ -501,7 +501,7 @@
                         <!-- Testimonial 5 -->
                         <div class="testimonial-card">
                             <div class="testimonial-card__header">
-                                <img src="assets/images/user-5.svg" alt="Мартин" class="testimonial-card__avatar" width="56" height="56">
+                                <img src="assets/images/мартин.jpg" alt="Мартин" class="testimonial-card__avatar" width="56" height="56">
                                 <div>
                                     <h4 class="testimonial-card__name">Мартин</h4>
                                     <div class="testimonial-card__stars" aria-label="Оценка: 5 из 5">
@@ -521,7 +521,7 @@
                         <!-- Testimonial 6 -->
                         <div class="testimonial-card">
                             <div class="testimonial-card__header">
-                                <img src="assets/images/user-6.svg" alt="Женя" class="testimonial-card__avatar" width="56" height="56">
+                                <img src="assets/images/женя.jpg" alt="Женя" class="testimonial-card__avatar" width="56" height="56">
                                 <div>
                                     <h4 class="testimonial-card__name">Женя</h4>
                                     <div class="testimonial-card__stars" aria-label="Оценка: 5 из 5">
@@ -599,7 +599,7 @@
                         </a>
                     </div>
                     <div class="app-preview__image fade-in">
-                        <img src="assets/images/app-phones.svg" alt="Приложение Ezotera на телефоне" width="400" height="480">
+                        <img src="assets/icons/развитие.jpg" alt="Приложение Ezotera на телефоне" width="400" height="480">
                     </div>
                 </div>
             </div>
