Sign up,zodiac onboarding

--- a/ezotera-frontend/index.html
+++ b/ezotera-frontend/index.html
@@ -43,18 +43,18 @@
                         </svg>
                     </a>
                     <div class="header__dropdown">
-                        <a href="#" class="header__dropdown-link">Овен</a>
-                        <a href="#" class="header__dropdown-link">Телец</a>
-                        <a href="#" class="header__dropdown-link">Близнецы</a>
-                        <a href="#" class="header__dropdown-link">Рак</a>
-                        <a href="#" class="header__dropdown-link">Лев</a>
-                        <a href="#" class="header__dropdown-link">Дева</a>
-                        <a href="#" class="header__dropdown-link">Весы</a>
-                        <a href="#" class="header__dropdown-link">Скорпион</a>
-                        <a href="#" class="header__dropdown-link">Стрелец</a>
-                        <a href="#" class="header__dropdown-link">Козерог</a>
-                        <a href="#" class="header__dropdown-link">Водолей</a>
-                        <a href="#" class="header__dropdown-link">Рыбы</a>
+                        <a href="zodiac/aries.html" class="header__dropdown-link">Овен</a>
+                        <a href="zodiac/taurus.html" class="header__dropdown-link">Телец</a>
+                        <a href="zodiac/gemini.html" class="header__dropdown-link">Близнецы</a>
+                        <a href="zodiac/cancer.html" class="header__dropdown-link">Рак</a>
+                        <a href="zodiac/leo.html" class="header__dropdown-link">Лев</a>
+                        <a href="zodiac/virgo.html" class="header__dropdown-link">Дева</a>
+                        <a href="zodiac/libra.html" class="header__dropdown-link">Весы</a>
+                        <a href="zodiac/scorpio.html" class="header__dropdown-link">Скорпион</a>
+                        <a href="zodiac/sagittarius.html" class="header__dropdown-link">Стрелец</a>
+                        <a href="zodiac/capricorn.html" class="header__dropdown-link">Козерог</a>
+                        <a href="zodiac/aquarius.html" class="header__dropdown-link">Водолей</a>
+                        <a href="zodiac/pisces.html" class="header__dropdown-link">Рыбы</a>
                     </div>
                 </div>
 
@@ -108,8 +108,8 @@
 
             <!-- Header Actions -->
             <div class="header__actions">
-                <a href="#" class="header__sign-in">Войти</a>
-                <a href="onboarding/step-1.html" class="button button--primary header__cta">
+                <a href="auth/login.html" class="header__sign-in">Войти</a>
+                <a href="onboarding/step-1-name.html" class="button button--primary header__cta">
                     Получить прогноз
                 </a>
             </div>
@@ -130,18 +130,18 @@
                     <svg class="header__nav-arrow" viewBox="0 0 12 12" aria-hidden="true"><path d="M2 4l4 4 4-4"/></svg>
                 </a>
                 <div class="header__mobile-dropdown" id="zodiac-mobile">
-                    <a href="#" class="header__mobile-dropdown-link">Овен</a>
-                    <a href="#" class="header__mobile-dropdown-link">Телец</a>
-                    <a href="#" class="header__mobile-dropdown-link">Близнецы</a>
-                    <a href="#" class="header__mobile-dropdown-link">Рак</a>
-                    <a href="#" class="header__mobile-dropdown-link">Лев</a>
-                    <a href="#" class="header__mobile-dropdown-link">Дева</a>
-                    <a href="#" class="header__mobile-dropdown-link">Весы</a>
-                    <a href="#" class="header__mobile-dropdown-link">Скорпион</a>
-                    <a href="#" class="header__mobile-dropdown-link">Стрелец</a>
-                    <a href="#" class="header__mobile-dropdown-link">Козерог</a>
-                    <a href="#" class="header__mobile-dropdown-link">Водолей</a>
-                    <a href="#" class="header__mobile-dropdown-link">Рыбы</a>
+                    <a href="zodiac/aries.html" class="header__mobile-dropdown-link">Овен</a>
+                    <a href="zodiac/taurus.html" class="header__mobile-dropdown-link">Телец</a>
+                    <a href="zodiac/gemini.html" class="header__mobile-dropdown-link">Близнецы</a>
+                    <a href="zodiac/cancer.html" class="header__mobile-dropdown-link">Рак</a>
+                    <a href="zodiac/leo.html" class="header__mobile-dropdown-link">Лев</a>
+                    <a href="zodiac/virgo.html" class="header__mobile-dropdown-link">Дева</a>
+                    <a href="zodiac/libra.html" class="header__mobile-dropdown-link">Весы</a>
+                    <a href="zodiac/scorpio.html" class="header__mobile-dropdown-link">Скорпион</a>
+                    <a href="zodiac/sagittarius.html" class="header__mobile-dropdown-link">Стрелец</a>
+                    <a href="zodiac/capricorn.html" class="header__mobile-dropdown-link">Козерог</a>
+                    <a href="zodiac/aquarius.html" class="header__mobile-dropdown-link">Водолей</a>
+                    <a href="zodiac/pisces.html" class="header__mobile-dropdown-link">Рыбы</a>
                 </div>
             </div>
             <div class="header__mobile-nav-item">
@@ -178,8 +178,8 @@
                 </div>
             </div>
             <div class="header__mobile-actions">
-                <a href="#" class="button button--outline-white button--full-width">Войти</a>
-                <a href="onboarding/step-1.html" class="button button--primary button--full-width">Получить прогноз</a>
+                <a href="auth/login.html" class="button button--outline-white button--full-width">Войти</a>
+                <a href="onboarding/step-1-name.html" class="button button--primary button--full-width">Получить прогноз</a>
             </div>
         </nav>
     </header>
@@ -203,7 +203,7 @@
                     <p class="hero__subtitle">
                         Получите индивидуальные предсказания для любви, отношений, финансов, здоровья и духовного роста — основанные на вашей натальной карте.
                     </p>
-                    <a href="onboarding/step-1.html" class="button button--primary button--large hero__cta">
+                    <a href="onboarding/step-1-name.html" class="button button--primary button--large hero__cta">
                         Получить мой прогноз
                     </a>
                 </div>
@@ -594,7 +594,7 @@
                                 Чат с профессиональными астрологами
                             </li>
                         </ul>
-                        <a href="onboarding/step-1.html" class="button button--primary button--large">
+                        <a href="onboarding/step-1-name.html" class="button button--primary button--large">
                             Получить мой прогноз
                         </a>
                     </div>
@@ -803,7 +803,7 @@
                     Начните свой путь к самопознанию уже сегодня с персональным астрологическим прогнозом.
                 </p>
                 <div class="cta-banner__actions">
-                    <a href="onboarding/step-1.html" class="button button--primary button--large">Получить мой прогноз</a>
+                    <a href="onboarding/step-1-name.html" class="button button--primary button--large">Получить мой прогноз</a>
                     <a href="contact.html" class="button button--outline-white button--large">Связаться с нами</a>
                 </div>
             </div>
