feat(frontend): add palmistry page interactivity and link handling
✨ Palmistry Page Functionality:

JavaScript Handler (palmistry.js):
- CTA button click handlers
- Smooth scroll to benefits section
- Placeholder for future upload modal
- Placeholder for future API integration
- Internal anchor link smooth scroll

Header Integration:
- Хиромантия link now routes to /palmistry.html
- Works from all page depths via header-loader.js
- Properly resolved relative paths
- Navigation placeholder comments for future modal

User Flow:
1. Click "Хиромантия" in header dropdown
2. Navigate to /palmistry.html
3. Click CTA button ("Получить персональный разбор")
4. Smooth scroll to benefits section
5. Future: Will open upload modal

Code Structure Ready For:
- Upload modal implementation
- Image processing API
- Payment integration
- AI analysis backend
- Email delivery system

All placeholder sections clearly marked for future development.

--- a/ezotera-frontend/palmistry.html
+++ b/ezotera-frontend/palmistry.html
@@ -21,6 +21,9 @@
     <!-- Header Loader -->
     <script src="js/header-loader.js"></script>
 
+    <!-- Palmistry Page Scripts -->
+    <script src="js/palmistry.js"></script>
+
 </head>
 <body class="palmistry-page">
 
