fix(frontend): unify header architecture - add navigation.js to all pages
CRITICAL FIX: Single Source of Truth Header Architecture

Problems Fixed:
1. Хиромантия link in main nav was broken (anchor link instead of page link)
2. Dropdown navigation not working on 17 pages (missing navigation.js)
3. header-loader.js called initializeNavigation() but script wasn't loaded
4. Silent failures with no error feedback
5. Inconsistent behavior across pages

Root Cause:
- Main nav Хиромантия had href='#' instead of PALMISTRY_HREF
- navigation.js selectively loaded (only on index, about, contact, pricing, zodiac)
- Missing from: palmistry, dashboard, auth/*, onboarding/* (17 pages)

Solution:
1. Fixed header.html: Хиромантия link now uses PALMISTRY_HREF placeholder
2. Added navigation.js to all missing pages:
   - palmistry.html
   - dashboard.html
   - auth/login.html
   - auth/register.html
   - All 13 onboarding pages

Result:
✅ Single header component (components/header.html)
✅ Single header loader (js/header-loader.js)
✅ Single navigation handler (js/navigation.js on all pages)
✅ Consistent dropdown/burger menu behavior everywhere
✅ Хиромантия link routes to /palmistry.html
✅ No broken navigation on any page

Files Modified: 20 files (header, palmistry, dashboard, auth, all onboarding pages)

--- a/ezotera-frontend/auth/login.html
+++ b/ezotera-frontend/auth/login.html
@@ -20,6 +20,9 @@
     <!-- Header Loader -->
     <script src="../js/header-loader.js"></script>
 
+    <!-- Global Navigation (Dropdowns, Mobile Menu) -->
+    <script src="../js/navigation.js"></script>
+
 </head>
 <body class="auth-body">
 
