--- a/ezotera-frontend/palmistry.html
+++ b/ezotera-frontend/palmistry.html
@@ -21,6 +21,9 @@
     <!-- Header Loader -->
     <script src="js/header-loader.js"></script>
 
+    <!-- Global Navigation (Dropdowns, Mobile Menu) -->
+    <script src="js/navigation.js"></script>
+
     <!-- Palmistry Page Scripts -->
     <script src="js/palmistry.js"></script>
 
