--- a/ezotera-frontend/auth/register.html
+++ b/ezotera-frontend/auth/register.html
@@ -20,6 +20,9 @@
     <!-- Header Loader -->
     <script src="../js/header-loader.js"></script>
 
+    <!-- Global Navigation (Dropdowns, Mobile Menu) -->
+    <script src="../js/navigation.js"></script>
+
 </head>
 <body class="auth-body">
 
