--- a/ezotera-frontend/onboarding/step-8-email.html
+++ b/ezotera-frontend/onboarding/step-8-email.html
@@ -18,6 +18,9 @@
     <!-- Header Loader -->
     <script src="../js/header-loader.js"></script>
 
+    <!-- Global Navigation (Dropdowns, Mobile Menu) -->
+    <script src="../js/navigation.js"></script>
+
 </head>
 <body class="onboarding-body">
 
